# interview

./: .gitignore  CMakeLists.txt  README.md  checkleak.sh  client  client.cpp  client.sh  compile.sh  envinstall.sh  makefile  makeproto.sh  netclient.hpp  proto.h  proto_test.cpp  run.sh  runClient.sh  runServer.sh  server  server.cpp  server.sh  user.h  utility.h
3rd/: CMakeLists.txt  makefile
common/: proto.h
entrance/: CMakeLists.txt  entrance.cpp
entrance/srcs/: entrance.cpp
include/common/: memory_traker.h  proto.h  signal_handler.h  utility.h
include/common/signal/: signal_handler.h
include/ellnet/: EpollEventContext.h  EpollEventHandler.h  EpollManager.h  EpollNet.h  EventHandler.h  epoll_connect_handler.h  epoll_event_context.h  epoll_event_handler.h  epoll_manager.h  epoll_net.h  epoll_net_header.h  event_context.h  event_handler.h  net_util.h
include/messageQueue/: GlobalQueue.h  MessageQueue.h
include/message_queue/: global_queue.h  message_queue.h
include/spdlog/: slog.h
include/watchdog/: WatchDogConnectHandler.h  watchdog.h  watchdog_connect_handler.h
leetcode/: isvalid.h  kthMagic.h  leetcode  leetcode.cpp  runcode.h  twosum.h
libs/: libspdlog.so.1.15  libspdlog.so.1.15.1
messageQueue/include/: MessageQueue.h
messageQueue/srcs/: GlobalQueue.h  MessageQueue.h
net/: CMakeLists.txt  ConnManager.cpp  ConnManager.h  CustomProto.h  EPConn.cpp  EPConn.h  EasyEllConn.cpp  EasyEllConn.h  EllBaseServer.cpp  EllBaseServer.h  EllConn.cpp  EllConn.h  EllConnBase.h  EllNetConfig.h  EpollClientTest.cpp  EpollEventHandler.cpp  EpollEventHandler.h  EpollServerTest.cpp  EventContext.h  EventHandler.h  KEConn.h  NetServerFactory.cpp  NetServerFactory.h  makefile
net/include/: EpollConnectHandler.h  EpollNet.h
net/srcs/: EpollConnectHandler.h  EpollContextManager.cpp  EpollContextManager.h  EpollEventContext.cpp  EpollEventContext.h  EpollEventHandler.cpp  EpollEventHandler.h  EpollManager.cpp  EpollManager.h  EpollNet.cpp  EpollNet.h  EpollServerTest.cpp  EventClientTest.cpp  EventContext.cpp  EventContext.h  EventHandler.h
objs/: libspdlog.so.1.15.1
proto/: chat.proto  common.proto
serialize/: serialize.h  serializeTest  serializeTest.cpp
src/common/: CMakeLists.txt
src/common/signal/: signal_handler.cpp
src/ellnet/: CMakeLists.txt  EpollEventContext.cpp  EpollEventHandler.cpp  EpollManager.cpp  EpollNet.cpp  EventContext.cpp  epoll_event_context.cpp  epoll_event_handler.cpp  epoll_manager.cpp  epoll_net.cpp  event_context.cpp
src/entrance/: CMakeLists.txt  entrance.cpp  makefile
src/entrance/srcs/: entrance.cpp
src/leetcode/: calculatedepth.h  leetcode  twosum.h
src/messageQueue/include/: GlobalQueue.h
src/message_queue/: CMakeLists.txt  global_queue.cc  message_queue.cc
src/net/: CMakeLists.txt  EpollClientTest.cpp  EpollServerTest.cpp
src/net/include/: EpollEventHandler.h  EpollManager.h  EpollNet.h  EventContext.h  EventHandler.h  netutil.h
src/net/srcs/: EpollEventHandler.cpp  EpollManager.cpp  EpollNet.cpp
src/player/: player.cpp  player.h
src/proto/: chat.proto  login.proto
src/serialize/: serialize.h  serializeTest
src/testlib/: CMakeLists.txt  entrancetest.cc  test.h  test_watchdog.cpp  testwatchdog.cpp
src/tests/: CMakeLists.txt  EpollServerTest.cpp  epoll_server_test.cpp  signal_handler_test.cpp
src/testso/: CMakeLists.txt
src/testso/main/: CMakeLists.txt
src/testso/src/: CMakeLists.txt
src/watchdog/: CMakeLists.txt  test.cpp  watchdog.cpp
src/watchdog/include/: WatchDogConnectHandler.h  watchdog.h
testlib/: CMakeLists.txt  client.cpp  makefile  server.cpp  test  testwatchdog.cpp  tmptest.cpp
testso/: CMakeLists.txt  add.cpp  gen_so.sh
testso/main/: main.cpp
watchdog/: makefile  test.cpp
watchdog/srcs/: WatchDogConnectHandler.h  watchdog.cpp  watchdog.h
