add_executable(entrance entrance.cpp)

target_link_libraries(entrance ${MESSAGE_QUEUE_A})
target_link_libraries(entrance ${ELLNET_A})
target_link_libraries(entrance ${WATCHDOG_A})

# target_compile_options(entrance PRIVATE -g -rdynamic)
# if(UNIX)
#     target_compile_options(entrance PRIVATE -g -rdynamic)
#     # target_link_libraries(entrance PRIVATE backtrace)
#     if (LIBUNWIND_INCLUDE_DIR AND LIBUNWIND_LIBRARY)
#         message(STATUS "Found libunwind: ${LIBUNWIND_LIBRARY}")
#         target_include_directories(entrance PRIVATE ${LIBUNWIND_INCLUDE_DIR})
#         target_link_libraries(entrance ${LIBUNWIND_LIBRARY})
#     else()
#         message(FATAL_ERROR "libunwind not found!")
#     endif()
# endif()